--- a/strings/src/main/res/values/untranslated.xml
+++ b/strings/src/main/res/values/untranslated.xml
@@ -8,20 +8,39 @@ the specific language governing permissions and limitations under the License. -
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- strings that should not be translated -->
     <string name="collect_app_name" translatable="false">ODK Collect</string>
-    <string name="app_url" translatable="false">https://getodk.org</string>
+    <string name="action_name" translatable="false">FieldTask Form</string>
+    <string name="app_name" translatable="false">FieldTask</string>
+    <string name="app_version" translatable="false">7.000</string>
+    <string name="default_username" translatable="false">gplay</string>
+    <string name="default_password" translatable="false">gplay</string>
+    <string name="default_server_url" translatable="false">https://sg.smap.com.au</string>
+    <string name="protocol_odk_default" translatable="false">odk_default</string>
+    <string name="protocol_google_sheets" translatable="false">google_sheets</string>
+    <string name="default_odk_formlist" translatable="false">/formList</string>
+    <string name="default_odk_submission" translatable="false">/submission</string>
+    <string name="app_url" translatable="false">https://www.smap.org</string>
     <string name="forum_url" translatable="false">"https://forum.getodk.org"</string>
     <string name="never_value" translatable="false">never</string>
     <string name="every_fifteen_minutes_value" translatable="false">every_fifteen_minutes</string>
     <string name="every_one_hour_value" translatable="false">every_one_hour</string>
     <string name="every_six_hours_value" translatable="false">every_six_hours</string>
     <string name="every_24_hours_value" translatable="false">every_24_hours</string>
+    <string name="app_theme_light" translatable="false">light_theme</string>
+    <string name="app_theme_dark" translatable="false">dark_theme</string>
+    <string name="server_platform_odk" translatable="false">ODK</string>
+    <string name="form_update_mode_manual" translatable="false">manual</string>
+    <string name="form_update_mode_previously_downloaded" translatable="false">previously_downloaded</string>
+    <string name="form_update_mode_match_exactly" translatable="false">match_exactly</string>
 
     <!-- For consistency, we don't translate these brand/organization names. -->
     <string name="basemap_source_google" translatable="false">Google</string>
     <string name="basemap_source_mapbox" translatable="false">Mapbox</string>
     <string name="basemap_source_osm" translatable="false">OpenStreetMap</string>
     <string name="basemap_source_usgs" translatable="false">USGS</string>
+    <string name="basemap_source_stamen" translatable="false">Stamen</string>
     <string name="basemap_source_carto" translatable="false">Carto</string>
+
+    <string name="google_drive" translatable="false">Google Drive</string>
 
     <string name="hash" translatable="false">#</string>
     <string name="hex" translatable="false">Hex</string>
