--- a/collect_app/src/smap/res/layout/smap_task_layout.xml
+++ b/collect_app/src/smap/res/layout/smap_task_layout.xml
@@ -33,8 +33,8 @@ the License.
         android:divider="@drawable/list_item_divider"/>
 
     <TextView
-        android:id="@android:id/empty"
-        style="@style/Widget.Collect.TextView.Empty"
-        android:text="@string/no_items_display" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/empty_list_of_questions" />
 
 </LinearLayout>
