--- a/collect_app/src/smap/res/layout/task_row.xml
+++ b/collect_app/src/smap/res/layout/task_row.xml
@@ -14,7 +14,6 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         />
     <LinearLayout
         android:orientation="vertical"
@@ -22,28 +21,28 @@
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:layout_toStartOf="@id/map_view"
-        android:layout_toLeftOf="@id/map_view">
+        >
 
         <TextView
             android:id="@+id/toptext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-            android:layout_toRightOf="@id/icon"
+            android:layout_toEndOf="@id/icon"
         />
         <TextView
             android:id="@+id/middletext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
-            android:layout_toRightOf="@id/icon"
+            android:layout_toEndOf="@id/icon"
         />
         <TextView
             android:id="@+id/bottomtext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:layout_toRightOf="@id/icon"
+            android:layout_toEndOf="@id/icon"
             android:visibility="gone"
         />
 
@@ -64,7 +63,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
 
