--- a/collect_app/src/main/res/layout/about_layout.xml
+++ b/collect_app/src/main/res/layout/about_layout.xml
@@ -7,6 +7,7 @@
 
     <include layout="@layout/app_bar_layout"/>
 
+    <!-- smap: Android version now included as RecyclerView item -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
