--- a/collect_app/src/main/res/values/buttons.xml
+++ b/collect_app/src/main/res/values/buttons.xml
@@ -51,4 +51,10 @@
         <item name="android:paddingBottom">@dimen/margin_small</item>
         <item name="android:textAppearance">?textAppearanceBodyMedium</item>
     </style>
+
+    <style name="Widget.Collect.Button.FullWidth" parent="Widget.Material3.Button">
+        <item name="android:paddingTop">@dimen/margin_standard</item>
+        <item name="android:paddingBottom">@dimen/margin_standard</item>
+        <item name="android:textSize">21sp</item>
+    </style>
 </resources>
