--- a/collect_app/src/smap/res/layout/smap_task_layout.xml
+++ b/collect_app/src/smap/res/layout/smap_task_layout.xml
@@ -33,8 +33,11 @@ the License.
         android:divider="@drawable/list_item_divider"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@android:id/empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/empty_list_of_questions" />
 
 </LinearLayout>
