--- a/collect_app/src/main/res/values/smap_strings.xml
+++ b/collect_app/src/main/res/values/smap_strings.xml
@@ -153,6 +153,9 @@
     <string name="smap_compromised">Compromised device detected - the application will exit</string>
     <string name="smap_emulator">The app is not allowed to be run on an emulator - the application will exit</string>
 
+    <!-- Override upstream strings for Smap -->
+    <string name="project_settings">Settings</string>
+
     <!-- Geocompound widget button labels -->
     <string name="get_geocompound">Start Compound Map</string>
     <string name="geocompound_view_change_location">View or Change Compound Map</string>
