--- a/collect_app/src/smap/res/drawable/ic_logo.xml
+++ b/collect_app/src/smap/res/drawable/ic_logo.xml
@@ -3,9 +3,10 @@
         android:height="221dp"
         android:viewportWidth="210.66667"
         android:viewportHeight="221.33333">
+    <!-- smap - transparent background for theme compatibility -->
     <path
         android:pathData="M-9.66,101.46L-9.66,-9.2L95.67,-9.2 201,-9.2L201,101.46 201,212.13L95.67,212.13 -9.66,212.13Z"
-        android:fillColor="#9494a0"
+        android:fillColor="#00000000"
         android:strokeWidth="1.33333337"/>
     <path
         android:pathData="M-9.66,101.46L-9.66,-9.2L95.67,-9.2 201,-9.2L201,101.46 201,212.13L95.67,212.13 -9.66,212.13ZM21.46,35.09c2.57,-3.51 8.36,-9.83 12.85,-14.05 6.71,-6.3 8.01,-8.2 7.27,-10.62 -0.5,-1.62 -1.09,-3.16 -1.32,-3.42 -1.03,-1.16 -10.76,7.72 -15.52,14.16 -2.89,3.91 -6.71,7.78 -8.5,8.59 -2.44,1.11 -3.24,2.52 -3.24,5.71 0,8.05 2.35,7.95 8.45,-0.37zM40.55,1.13C40.18,0.21 39.88,0.96 39.88,2.8c0,1.83 0.3,2.58 0.67,1.67 0.37,-0.92 0.37,-2.42 0,-3.33zM152.64,-7.34C152.2,-7.78 151.05,-7.83 150.09,-7.45c-1.06,0.43 -0.75,0.74 0.81,0.81 1.41,0.06 2.19,-0.26 1.75,-0.7z"
