--- a/collect_app/src/main/res/xml/access_control_preferences.xml
+++ b/collect_app/src/main/res/xml/access_control_preferences.xml
@@ -19,4 +19,14 @@
         android:key="form_entry"
         android:summary="@string/form_entry_settings_summary"
         android:title="@string/form_entry_setting" />
+
+    <!-- smap reset application -->
+    <org.odk.collect.android.preferences.dialogs.ResetDialogPreference
+        android:icon="@drawable/ic_outline_refresh_accent_24"
+        android:dialogTitle="@string/reset_settings_dialog_title"
+        android:key="reset_settings"
+        android:negativeButtonText="@string/cancel"
+        android:positiveButtonText="@string/reset_settings_button_reset"
+        android:title="@string/reset_project_settings_title"
+        android:summary="@string/reset_project_settings_subtext" />
 </PreferenceScreen>
