--- a/collect_app/src/smap/res/menu/smap_menu.xml
+++ b/collect_app/src/smap/res/menu/smap_menu.xml
@@ -45,4 +45,10 @@ limitations under the License.
         android:title="@string/general_preferences"
         app:showAsAction="never"/>
 
+    <!-- smap admin menu -->
+    <item
+        android:id="@+id/menu_admin_preferences"
+        android:title="@string/admin_preferences"
+        app:showAsAction="never"/>
+
 </menu>
