--- a/collect_app/src/main/res/values/smap_strings.xml
+++ b/collect_app/src/main/res/values/smap_strings.xml
@@ -155,6 +155,8 @@
 
     <!-- Override upstream strings for Smap -->
     <string name="project_settings">Settings</string>
+    <string name="general_preferences">General Settings</string>
+    <string name="admin_preferences">Admin Preferences</string>
 
     <!-- Geocompound widget button labels -->
     <string name="get_geocompound">Start Compound Map</string>
