--- a/collect_app/src/smap/res/menu/smap_menu_map.xml
+++ b/collect_app/src/smap/res/menu/smap_menu_map.xml
@@ -55,4 +55,11 @@ limitations under the License.
         android:title="@string/exit"
         app:showAsAction="never"/>
 
+    <!-- smap admin menu - visibility controlled by server setting -->
+    <item
+        android:id="@+id/menu_admin_preferences"
+        android:title="@string/admin_preferences"
+        android:visible="false"
+        app:showAsAction="never"/>
+
 </menu>
