--- a/collect_app/src/smap/res/layout/task_row.xml
+++ b/collect_app/src/smap/res/layout/task_row.xml
@@ -50,11 +50,14 @@
 
     <ImageView
         android:id="@+id/menu_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:padding="12dp"
         android:src="@drawable/ic_baseline_more_vert_24"
-        android:background="@null">
-    </ImageView>
+        app:tint="?android:attr/textColorPrimary"
+        android:background="?selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:focusable="true" />
 
     <FrameLayout
         android:id="@+id/map_view"
