--- a/collect_app/src/smap/res/layout/ft_map_layout.xml
+++ b/collect_app/src/smap/res/layout/ft_map_layout.xml
@@ -25,15 +25,15 @@
             android:paddingTop="0dip"
             android:paddingBottom="60dip">
 
-            <!--
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/show_location"
                 app:srcCompat="@drawable/ic_my_location"
                 android:padding="15dp"
                 android:layout_margin="5dp"
                 android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                />-->
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                />
 
             <!--
             <androidx.appcompat.widget.AppCompatImageButton
