Fix issue introduced by task menu addition that prevent a tap on the task to open it

--- a/collect_app/src/smap/res/layout/task_row.xml
+++ b/collect_app/src/smap/res/layout/task_row.xml
@@ -57,7 +57,7 @@
         app:tint="?android:attr/textColorPrimary"
         android:background="?selectableItemBackgroundBorderless"
         android:clickable="true"
-        android:focusable="true" />
+        android:focusable="false" />
 
     <FrameLayout
         android:id="@+id/map_view"
